Fixed menu was still visible when clicked to close search input

--- a/contradefensa/content/themes/contradefensa/assets/css/screen.css
+++ b/contradefensa/content/themes/contradefensa/assets/css/screen.css
@@ -396,6 +396,12 @@ body.home-template .gh-head-inner {
     display: flex;
     font-weight: 500;
     width: 100%;
+    visibility: visible;
+    transition: 2s ease;
+}
+
+.gh-head-menu.hide {
+    display: none;
 }
 
 .gh-head-menu .nav {
